add bitcoin previous block hash setter

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,8 +11,12 @@
     "cSpell.words": [
         "BITSTREAM",
         "Eeprom",
+        "GPIO",
         "HODL",
+        "hspi",
+        "htim",
         "Iceuncompr",
+        "ingressing",
         "leds",
         "merkle",
         "nayn",
