describe FPGA and NyanOS interaction

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,18 +10,25 @@
     },
     "cSpell.words": [
         "BITSTREAM",
+        "bitstreams",
+        "compr",
+        "debouncer",
         "Eeprom",
         "GPIO",
         "HODL",
         "hspi",
         "htim",
+        "icecompr",
         "Iceuncompr",
         "ingressing",
         "leds",
+        "Mbit",
         "merkle",
         "nayn",
+        "nextpnr",
         "NYAN",
-        "uncompr"
+        "uncompr",
+        "yosys"
     ],
     "cortex-debug.armToolchainPath": "/home/qrsnap/.config/Code/User/globalStorage/bmd.stm32-for-vscode/@xpack-dev-tools/arm-none-eabi-gcc/12.3.1-1.2.1/.content/bin",
     "cortex-debug.openocdPath": "/home/qrsnap/.config/Code/User/globalStorage/bmd.stm32-for-vscode/@xpack-dev-tools/openocd/0.12.0-2.1/.content/bin/openocd",
