--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,7 +7,8 @@
         "usbd_cdc_acm_if.h": "c",
         "nyan_os.h": "c",
         "24xx_eeprom.h": "c",
-        "lattice_ice_hx.h": "c"
+        "lattice_ice_hx.h": "c",
+        "nyan_eeprom_map.h": "c"
     },
     "cSpell.words": [
         "BITSTREAM",
