vscode spell check fixes

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,26 +11,45 @@
         "nyan_eeprom_map.h": "c"
     },
     "cSpell.words": [
+        "BINTERVAL",
         "BITSTREAM",
         "bitstreams",
+        "cfgidx",
         "compr",
         "debouncer",
         "Eeprom",
+        "EMEM",
+        "endverbatim",
+        "EPIN",
+        "epnum",
         "GPIO",
+        "hhid",
+        "HIBYTE",
         "HODL",
         "hspi",
         "htim",
+        "ICCARM",
         "icecompr",
         "Iceuncompr",
         "ingressing",
         "leds",
+        "LOBYTE",
         "Mbit",
         "merkle",
         "nayn",
         "nextpnr",
+        "NKRO",
+        "nucleo",
         "NYAN",
+        "pdev",
+        "PRNT",
+        "PRNTR",
         "Proto",
+        "RNDIS",
+        "SPKR",
         "uncompr",
+        "usbd",
+        "Vbus",
         "yosys"
     ],
     "cortex-debug.armToolchainPath": "/home/qrsnap/.config/Code/User/globalStorage/bmd.stm32-for-vscode/@xpack-dev-tools/arm-none-eabi-gcc/12.3.1-1.2.1/.content/bin",
