USB HID Descriptor Send - HID Broken

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,7 +11,8 @@
         "nyan_eeprom_map.h": "c",
         "spi.h": "c",
         "usb_hid_keys.h": "c",
-        "nyan_keys.h": "c"
+        "nyan_keys.h": "c",
+        "usb_device.h": "c"
     },
     "cSpell.words": [
         "BINTERVAL",
