nkro added - boot mode not tested

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,7 +13,8 @@
         "usb_hid_keys.h": "c",
         "nyan_keys.h": "c",
         "usb_device.h": "c",
-        "usbd_hid_keyboard.h": "c"
+        "usbd_hid_keyboard.h": "c",
+        "usbd_ioreq.h": "c"
     },
     "cSpell.words": [
         "BINTERVAL",
