add composite master folder - remove spi1

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -24,6 +24,7 @@
         "CAPSLOCK",
         "cfgidx",
         "compr",
+        "CUBEMX",
         "debouncer",
         "Eeprom",
         "EJECTCD",
