--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,16 +15,20 @@
         "usb_device.h": "c",
         "usbd_hid_keyboard.h": "c",
         "usbd_ioreq.h": "c",
-        "tim.h": "c"
+        "tim.h": "c",
+        "nyan_temp_sensor.h": "c",
+        "nyan_bitcoin.h": "c"
     },
     "cSpell.words": [
         "BINTERVAL",
+        "bitcounter",
         "BITSTREAM",
         "bitstreams",
         "BOOTKEYCODE",
         "CAPSLOCK",
         "cfgidx",
         "compr",
+        "CRESET",
         "debouncer",
         "Eeprom",
         "EJECTCD",
@@ -42,6 +46,7 @@
         "hhid",
         "HIBYTE",
         "HODL",
+        "hpcd",
         "hspi",
         "htim",
         "ICCARM",
@@ -73,12 +78,14 @@
         "LOBYTE",
         "LSHIFT",
         "Mbit",
+        "MEMADD",
         "merkle",
         "MUHENKAN",
         "nayn",
         "nextpnr",
         "NEXTSONG",
         "NKRO",
+        "NRKO",
         "nucleo",
         "NUMLOCK",
         "NYAN",
@@ -100,6 +107,7 @@
         "RMETA",
         "RNDIS",
         "RSHIFT",
+        "scancodes",
         "SCROLLDOWN",
         "SCROLLUP",
         "Spacebar",
