cleanup and added super key disable across reboots

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -28,6 +28,7 @@
         "CAPSLOCK",
         "cfgidx",
         "compr",
+        "Cplt",
         "CRESET",
         "debouncer",
         "Eeprom",
