FPGA SPI Master Firmware

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -41,9 +41,11 @@
         "EXTKEYCODE",
         "getperf",
         "GPIO",
+        "GPIOD",
         "HANGEUL",
         "HANJA",
         "HASHTILDE",
+        "hdma",
         "HENKAN",
         "hhid",
         "HIBYTE",
