added a better reset

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -103,6 +103,7 @@
         "Proto",
         "RALT",
         "RCTRL",
+        "resetn",
         "RIGHTALT",
         "RIGHTBRACE",
         "RIGHTCTRL",
